# NintendoSDK-NEX

./: CMakeLists.txt  README.md
.github/workflows/: lint.yml
OnlineCore/include/Core/: Buffer.h  CacheManager.h  Chrono.h  FileStorageDevice.h  InstanceControl.h  InstanceTable.h  InstantiationContext.h  Key.h  LocalClock.h  Plugin.h  PseudoGlobalVariable.h  PseudoGlobalVariableList.h  PseudoGlobalVariableRoot.h  PseudoSingleton.h  SystemClock.h  SystemComponent.h  Time.h  UtilitySubsystem.h
OnlineCore/include/Core/Checksum/: EncryptionAlgorithm.h  RC4Encryption.h
OnlineCore/include/Core/Checksum/Interface/: CRC16Checksum.h  ChecksumAlgorithm.h  MD5Checksum.h
OnlineCore/include/Core/Checksum/MD5/: MD5.h
OnlineCore/include/Core/Checksum/SHA1/: SHA1.h
OnlineCore/include/DDLTypes/: DDLDeclarations.h  DynamicRunTimeInterface.h
OnlineCore/include/Platform/Core/: ConsoleIO.h  DateTime.h  GlobalVariables.h  LockChecker.h  Log.h  LogDeviceConsole.h  MemAllocator.h  MemoryManager.h  MutexPrimitive.h  OutputFormat.h  Platform.h  RefCountedObject.h  Result.h  RootObject.h  String.h  StringStream.h  SystemClock.h  SystemError.h  Time.h  Variant.h  VersionInfo.h  WaterMark.h
OnlineCore/include/Platform/Host/: Configuration.h  ConfigurationVariable.h
OnlineCore/include/Platform/Stack/Core/: InetAddress.h  InterfaceInfo.h  SocketDriver.h
OnlineCore/src/Core/: Chrono.cpp  FileStorageDevice.cpp  InstantiationContext.cpp  LocalClock.cpp  Plugin.cpp  StorageUnit.cpp  UtilitySubsystem.cpp
OnlineCore/src/Core/Checksum/SHA1/: SHA1.cpp
OnlineCore/src/Platform/Core/: BadEvents.cpp  ConsoleIO.cpp  DateTime.cpp  LockChecker.cpp  Log.cpp  LogDeviceConsole.cpp  MemoryManager.cpp  MutexPrimitive.cpp  OutputFormat.cpp  Platform.cpp  Result.cpp  RootObject.cpp  String.cpp  SystemError.cpp  Time.cpp  Variant.cpp  VersionInfo.cpp
OnlineCore/src/Platform/Host/: Configuration.cpp
OnlineCore/src/Platform/Stack/Core/: InetAddress.cpp  InterfaceInfo.cpp
RendezVous/Core/include/Common/: ClientProtocol.h  Protocol.h  ServerProtocol.h
RendezVous/Core/include/Common/NintendoProtocolFoundation/: NintendoAuthenticationDDLDeclarations.h
RendezVous/Services/: Data.h
RendezVous/src/Services/: Data.cpp
docs/: paths.txt
